exp.out
Traceback (most recent call last):
  File "/home/s1949624/RL_matching/experiments.py", line 2, in <module>
    from dqn import *
  File "/home/s1949624/RL_matching/dqn.py", line 8
    print device_lib.list_local_devices()
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
